# Swarm-pickup-goods

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  run.sh
.devcontainer/: devcontainer.json
workspace/argos3/: UPSTREAM.txt
workspace/argos3/src/scripts/: uninstall_argos3.sh.in
workspace/ball-collector/: CMakeLists.txt  README.md
workspace/ball-collector/controllers/: CMakeLists.txt
workspace/ball-collector/controllers/footbot_collector/: CMakeLists.txt  footbot_collector.cpp  footbot_collector.h
workspace/ball-collector/experiments/: ball_collection.argos
workspace/ball-collector/loop_functions/: CMakeLists.txt
workspace/ball-collector/loop_functions/collection_loop_functions/: CMakeLists.txt  collection_loop_functions.cpp  collection_loop_functions.h  collection_qt_user_functions.cpp  collection_qt_user_functions.h
workspace/grid-swarm-robot/: CMakeLists.txt  README.md  grid_layout.h
workspace/grid-swarm-robot/common/: grid_geometry.h  grid_layout.h  grid_map.h  grid_protocol.h
workspace/grid-swarm-robot/controllers/footbot_grid/: footbot_grid.cpp  footbot_grid.h  footbot_grid_comms.cpp  footbot_grid_detour.cpp  footbot_grid_fsm.cpp  footbot_grid_localization.cpp  footbot_grid_nav.cpp  footbot_grid_pathfinding.cpp  footbot_grid_steering.cpp  footbot_grid_traffic.cpp
workspace/grid-swarm-robot/experiments/: grid_swarm.argos
workspace/grid-swarm-robot/loop_functions/: CMakeLists.txt
workspace/grid-swarm-robot/loop_functions/grid_loop_functions/: CMakeLists.txt  grid_docks.cpp  grid_energy_safety.cpp  grid_floor_render.cpp  grid_loop_functions.cpp  grid_loop_functions.h  grid_metrics.cpp  grid_qt_user_functions.cpp  grid_qt_user_functions.h  grid_reservations.cpp  grid_task_board.cpp
workspace/warehouse-swarm/: CMakeLists.txt  README.md
workspace/warehouse-swarm/controllers/: CMakeLists.txt
workspace/warehouse-swarm/controllers/footbot_warehouse/: CMakeLists.txt  footbot_comms.cpp  footbot_docking.cpp  footbot_navigation.cpp  footbot_rescue.cpp  footbot_task_allocation.cpp  footbot_warehouse.cpp  footbot_warehouse.h
workspace/warehouse-swarm/experiments/: warehouse.argos
workspace/warehouse-swarm/loop_functions/: CMakeLists.txt
workspace/warehouse-swarm/loop_functions/warehouse_loop_functions/: CMakeLists.txt  warehouse_floor_render.cpp  warehouse_loop_functions.cpp  warehouse_loop_functions.h  warehouse_metrics.cpp  warehouse_qt_user_functions.cpp  warehouse_qt_user_functions.h  warehouse_robot_update.cpp  warehouse_spawning.cpp
